Added install/simpleftp_install.sh (will work on Windows script next), updated README.md and converted project to JDK 11